2016-10-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/__init__.py: Added refine_grid().

	Function to refine a grid in a GriddedField. The data is interpolated to
	match the new coordinates.

2016-10-21  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-10-21  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.3.4 Release.

2016-10-21  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py:

	Avoid abort of test procedure when no DISPLAY is defined.

	* typhon/arts/tests/test_arts.py:

	Add TODO on 'Skipped' indicator not being displayed properly when
	running tests from inside ipython.

2016-10-21  Oliver Lemke  <olemke@core-dump.info>

	* MANIFEST.in: Ensure that all tests and reference files are installed.

2016-10-21  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-10-21  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.3.3 Release.

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/em.py: Fixed documentation.

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/em.py:

	Added rayleighjeans_wavelength() and planck_wavenumber().

	* typhon/physics/tests/test_physics.py:

	Added tests for newly implemented functions.

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/__init__.py:

	disable syntax checking for imports using the noqa (no quality assurance)
	directive.

	* typhon/physics/em.py: Fixed bugs (found while writing tests).

	* typhon/physics/tests,
	typhon/physics/tests/test_physics.py:

	Tests for typhon.physics.

2016-10-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/cm/tests, typhon/cm/tests/test_cm.py:

	Tests for typhon.cm.

	* typhon/cm/tests/reference,
	typhon/cm/tests/reference/viridis.cpt,
	typhon/cm/tests/reference/viridis.txt:

	Reference data for colormap tests.

	* typhon/arts/xml/tests/test_matpack_types.py:
